# mole

./: .gitignore  .travis.yml  LICENSE  README.md  mole.cabal  shell.nix  stack.yaml
script/: bootstrap
src/: Main.hs
src/Data/Mole/: Builder.hs  Core.hs  Server.hs  Types.hs  Watcher.hs
src/Data/Mole/Builder/: Binary.hs  External.hs  Html.hs  Image.hs  JavaScript.hs  Stylesheet.hs
src/Data/Mole/Builder/Internal/: Fingerprint.hs  Template.hs
test/: Test.hs
