name:                mole
version:             0.0.1

synopsis:            A glorified string replacement tool
description:
    A glorified string replacement tool. For a very specific purpose. That
    purpose being to compile and optimize a static website (or a single-page
    application). Mole inspects source, builds a complete dependency tree,
    minifies and compresses the files, adds fingerprints and writes the result
    to a directory.

license:             MIT
license-file:        LICENSE
author:              Tomas Carnecky
maintainer:          tomas.carnecky@gmail.com

category:            System

build-type:          Simple
cabal-version:       >=1.10


source-repository head
    type:     git
    location: git://github.com/wereHamster/mole.git


executable mole
    hs-source-dirs:      src
    default-language:    Haskell2010

    ghc-options:         -Wall -threaded -O2 -rtsopts

    main-is:             Main.hs

    build-depends:
       base >=4.6 && <4.9
     , containers
     , bytestring
     , base64-bytestring
     , tagsoup
     , stm
     , cryptohash
     , filepath
     , filemanip
     , fsnotify
     , directory
     , system-filepath
     , snap
     , snap-server
     , text
     , transformers
     , process
     , attoparsec
     , network-uri
     , optparse-applicative
     , time
     , mtl
     , kraken
     , unix


test-suite spec
    hs-source-dirs:      src test
    default-language:    Haskell2010

    main-is:             Test.hs
    type:                exitcode-stdio-1.0

    build-depends:
       base <4.9
     , hspec
     , smallcheck
     , hspec-smallcheck
     , vector
     , text
     , unordered-containers
     , time
     , kraken
     , attoparsec
     , stm
     , bytestring
     , containers
